compiler/testData/cli/jvm/jsr305FqNameStrict.out
compiler/testData/cli/jvm/jsr305Migration.kt:2:19: error: null cannot be a value of a non-null type 'kotlin.String'.
    annotated.foo(null)
                  ^
compiler/testData/cli/jvm/jsr305Migration.kt:3:19: error: null cannot be a value of a non-null type 'kotlin.String'.
    annotated.bar(null)
                  ^
COMPILATION_ERROR
